--- a/front/src/Component/startPage.css
+++ b/front/src/Component/startPage.css
@@ -25,3 +25,11 @@
   bottom: 0;
   left: 0;
 }
+.ratings i {
+  color: #cecece;
+  font-size: 32px;
+}
+
+.rating-color {
+  color: #fbc634 !important;
+}
